3d-printing/gridfinitycreator/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gridfinitycreator
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: gridfinitycreator
      app.kubernetes.io/name: gridfinitycreator
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: gridfinitycreator
        app.kubernetes.io/name: gridfinitycreator
    spec:
      containers:
        - name: gridfinitycreator
          image: ghcr.io/webd97/gridfinitycreator:5427b44
          ports:
            - containerPort: 5000
              name: http
              protocol: TCP
          volumeMounts:
            - mountPath: /tmpfiles
              name: tmpfiles
            - mountPath: /logs
              name: logs
          resources:
            requests:
              memory: 256Mi
              cpu: 50m
            limits:
              memory: 512Mi
              cpu: 1000m
      volumes:
        - name: tmpfiles
          emptyDir: {}
        - name: logs
          emptyDir: {}
