3d-printing/gridfinitycreator/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gridfinitycreator
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/instance: gridfinitycreator
    app.kubernetes.io/name: gridfinitycreator
  type: ClusterIP
