3d-printing/gridfinitycreator/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gridfinitycreator
spec:
  parentRefs:
    - name: default-gateway
      namespace: kube-system
  hostnames:
    - "gridfinitycreator.homelab.cloudbending.dev"
  rules:
    - backendRefs:
        - name: gridfinitycreator
          port: 80
